@@ -28,6 +28,7 @@ Bug fixes:
 * leaving .fun as NULL now always returns list (thanks to Stavros Macrakis for the bug report)
 * progress bars guaranteed to terminate even if **ply prematurely terminates
 * labels from a*ply now respect options(stringAsFactors)
+* misspelled progress bar gives informative warning, instead of uninformative error
 
 
 plyr 0.1.9 (2009-06-23) ---------------------------------------------------
